[tool.poetry]
name = "agentdesk"
version = "0.2.3"
description = "A desktop for AI agents"
authors = ["Patrick Barker <patrickbarkerco@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"
packages = [{include = "agentdesk"}]

[tool.poetry.dependencies]
python = "^3.10"
pillow = "^10.2.0"
requests = "^2.31.0"
agent-tool = "^0.1.4"
fastapi = {extras = ["all"], version = "^0.109.0"}
sqlalchemy = "^2.0.25"
psycopg2-binary = "^2.9.9"
psutil = "^5.9.8"
google-cloud-storage = "^2.14.0"
docker = "^7.0.0"
pycdlib = "^1.14.0"
namesgenerator = "^0.3"
paramiko = "^3.4.0"
typer = "^0.9.0"
tabulate = "^0.9.0"
tqdm = "^4.66.2"


[tool.poetry.group.gcp.dependencies]
google-cloud-compute = "^1.15.0"
google-cloud-container = "^2.38.0"


[tool.poetry.group.aws.dependencies]
boto3 = "^1.34.28"
boto3-stubs = {extras = ["ec2"], version = "^1.34.28"}


[tool.poetry.group.demo.dependencies]
openai = "^1.12.0"

[tool.poetry.scripts]
agentdesk = "agentdesk.cli.main:app"
agentd = "agentdesk.cli.main:app"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
