[tool.poetry]
name = "agentdesk"
version = "0.2.99"
description = "A desktop for AI agents"
authors = ["Patrick Barker <patrickbarkerco@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "agentdesk"}]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
pillow = "^10.2.0"
requests = "^2.31.0"
fastapi = {extras = ["all"], version = "^0.109.0"}
sqlalchemy = "^2.0.25"
psycopg2-binary = "^2.9.9"
psutil = "^5.9.8"
docker = "^7.0.0"
pycdlib = "^1.14.0"
namesgenerator = "^0.3"
paramiko = "^3.4.0"
typer = "^0.9.0"
tabulate = "^0.9.0"
tqdm = "^4.66.2"
tenacity = "^8.2.3"
google-cloud-storage = "^2.14.0"
google-cloud-compute = "^1.15.0"
google-cloud-container = "^2.38.0"
boto3 = "^1.34.28"
boto3-stubs = {extras = ["ec2"], version = "^1.34.28"}
mypy-boto3-ec2 = "^1.34.52"
toolfuse = "^0.1.13"
devicebay = "^0.1.28"
kubernetes = "^31.0.0"
shortuuid = "^1.0.13"


[tool.poetry.group.gcp.dependencies]
google-cloud-compute = "^1.15.0"
google-cloud-container = "^2.38.0"


[tool.poetry.group.aws.dependencies]
boto3 = "^1.34.28"
boto3-stubs = {extras = ["ec2"], version = "^1.34.28"}
mypy-boto3-ec2 = "^1.34.52"


[tool.poetry.group.demo.dependencies]
openai = "^1.12.0"

[tool.poetry.scripts]
agentdesk = "agentdesk.cli.main:app"
agentd = "agentdesk.cli.main:app"
build-docs = "scripts.build_docs:main"
lint = "scripts.lint:main"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.0"
sphinx = "^7.2.6"
sphinx-rtd-theme = "^2.0.0"
recommonmark = "^0.7.1"
flake8 = "^7.0.0"
black = "^24.2.0"
pytest = "^8.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
